# readme-generator

./: Cargo.toml  README.md
.github/: FUNDING.yml
examples/: README.md
src/: main.rs
