[package]
name = "readme-generator"
version = "0.1.2"
edition = "2021"
description = "A very easy-to-use README generator that works in your terminal. Never stress about readme again!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"